<resources>
    <string name="app_name">E-commerce</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_use_facebook_gmail">Or use Facebook / Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="connection_error">Connection error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="please_wait">Please wait</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="or">OR</string>
    <string name="create_account">Create account</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wish list</string>
    <string name="cart">Cart</string>
    <string name="deals">Deals</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
    <string name="see_more">See more</string>
    <string name="best_seller">BEST SELLER</string>
    <string name="top_categories">TOP CATEGORIES</string>
    <string name="hot_deals">HOT DEALS</string>
    <string name="you_must_be_logged_in">Sorry, You must be logged in</string>
    <string name="facebook_cap">FACEBOOK</string>
    <string name="slash">/</string>
    <string name="hot_deals_today">HOT DEALS TODAY</string>
    <string name="top_brands">TOP BRANDS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="select_size">Select Size</string>
    <string name="select_color">Select Color</string>
    <string name="quantity">Quantity:</string>
    <string name="no_available_sizes">No available sizes</string>
    <string name="no_available_colors">No available colors</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="total">TOTAL</string>
    <string name="items">item(s)</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="confirmation">Confirmation</string>
    <string name="continue_to_checkout">CHECK OUT</string>
    <string name="change_address">Change Address</string>
    <string name="shipment">Shipment</string>
    <string name="continue_to_payent">Continue to Payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="credit_card">Credit card</string>
    <string name="done">Done</string>
    <string name="track_your_order">Track your order</string>
    <string name="my_orders">My Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="city">City</string>
    <string name="notes">Notes</string>
    <string name="phone_no">Phone no.</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="building">Building</string>
    <string name="street">Street</string>
    <string name="landmark">Landmark</string>
    <string name="required_field">Required field</string>
    <string name="no_addresses_found">You must have at least one address in your profile</string>
    <string name="add_address">Add Address</string>
    <string name="checkout">Checkout</string>
    <string name="place_order_message">Are you sure you wanna place the order ?</string>
    <string name="place_order">Place order</string>
    <string name="cancel">Cancel</string>
    <string name="buy_now">BUY NOW</string>
    <string name="orders">Orders</string>
    <string name="description">Description</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="products">Products</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="new_text">New</string>
    <string name="popular">Popular</string>
    <string name="price_high_to_low">Price, high to low</string>
    <string name="price_low_to_high">Price, low to high</string>
    <string name="categories">Categories</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="select_language">Select Language</string>
    <string name="application_language">Application Language</string>
    <string name="change_language_text">Are you sure you want to change the app locale ?</string>
    <string name="restart_app">Restart App</string>
    <string name="logout_question">Are you sure you want to logout ?</string>
    <string name="order_date">Order Date</string>
    <string name="_2789542125">2789542125</string>
    <string name="proccessing">InProcessing</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="removed_from_fav">Product removed from favourites successfully</string>
    <string name="added_to_fav">Product added to favourites successfully</string>
    <string name="added_to_cart">Added to cart successfully</string>
    <string name="brands">Brands</string>
    <string name="price">Price</string>
    <string name="sub_categories">Sub categories</string>
    <string name="no_filter_data_available">No filer data available !</string>
    <string name="address_selected_successfully">Address selected successfully</string>
    <string name="title_activity_maps">Map</string>
</resources>
