<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="com.intcore.internship.ecommerce.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/skipTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/skip"
                android:textColor="@color/main_text_color"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:textColor="@color/main_text_color"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skipTV" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/main_text_color"
                android:hint="@string/email_address"
                android:drawableStart="@drawable/selector_user_ic"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/selector_edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_edit_text_background"
                android:drawableStart="@drawable/selector_lock_ic"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintEnd_toEndOf="@+id/emailET"
                app:layout_constraintStart_toStartOf="@+id/emailET"
                app:layout_constraintTop_toBottomOf="@+id/emailET" />

            <TextView
                android:id="@+id/forgotPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:focusable="true"
                android:textSize="14sp"
                android:textColor="@color/main_text_color"
                app:layout_constraintEnd_toEndOf="@+id/passwordET"
                app:layout_constraintTop_toBottomOf="@+id/passwordET" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/passwordET"
                app:layout_constraintStart_toStartOf="@+id/passwordET"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/loginButton"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/or_use_facebook_gmail"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <Button
                android:id="@+id/facebookLoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/facebook"
                app:layout_constraintEnd_toStartOf="@+id/googleLoginButton"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/googleLoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/google"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@id/facebookLoginButton"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/not_registered_yet"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/signUpTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googleLoginButton" />

            <TextView
                android:id="@+id/signUpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/main_text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/googleLoginButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>