<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_size"
        android:textSize="17sp"
        android:textColor="@color/main_text_color"
        android:fontFamily="@font/sfui_semibold"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/sizesLL"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_color"
        android:textSize="17sp"
        android:textColor="@color/main_text_color"
        android:fontFamily="@font/sfui_semibold"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/colorsLL"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="17sp"
            android:textColor="@color/main_text_color"
            android:fontFamily="@font/sfui_semibold"/>

        <EditText
            android:id="@+id/quantityET"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:background="@drawable/selector_edit_text_background"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:maxLength="2"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:id="@+id/addToCartTV"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_gradient"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:fontFamily="@font/sfui_medium"
        android:textSize="18sp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="16dp"/>


</LinearLayout>